--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^5.7.0",
     "mongoose": "^8.0.3",
     "next": "13.5.6",
     "react": "^18",
